# rowhouse

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
aws/: __init__.py  s3.py
common/: __init__.py  paths.py
discover/: __init__.py  analyzer.py  similarity.py
examples/: basic_usage.py  discover_example.py  discover_workflow.ipynb  sample_config.json  unfurl_lambda.py
tests/: conftest.py  test_aligned_structure.py  test_discover.py  test_extreme_nesting.py  test_json_processor.py  test_processor_bug.py  test_validation.py
unfurl/: __init__.py  json_processor.py
validation/: __init__.py  validator.py
